MeshVertex.co contains incorrect data after calling ShapeKey.normals_polygon_get() #97679

Closed
opened 2022-04-28 15:03:08 +02:00 by Ivan Lyubovnikov · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.1.1, branch: master, commit date: 2022-03-29 17:50, hash: d91843f3b6
Worked: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e

Short description of error
If a mesh has a shape key then after calling ShapeKey.normals_polygon_get() the vertices affected by the key will have wrong coordinates when accessed via MeshVertex.co.

Exact steps for others to reproduce the error

  1. open the attached blend file
  2. run the active script in the Text Editor
  3. check the output in the system console

Expected results: vertex coordinates accessed before and after ShapeKey.normals_polygon_get() are the same, e.g.:
<Vector (1.0000, 1.0000, 1.0000)>
<Vector (1.0000, 1.0000, 1.0000)>

Actual results: vertex coordinates are different, e.g.:
<Vector (1.0000, 1.0000, 1.0000)>
<Vector (2.0000, 2.0000, 2.0000)>

Additional notes:

  • can be reproduced in the latest 3.2.0 build
  • same issue also arises when using ShapeKey.normals_split_get() or ShapeKey.normals_vertex_get() instead of ShapeKey.normals_polygon_get()

test.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.1.1, branch: master, commit date: 2022-03-29 17:50, hash: `d91843f3b6` Worked: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` **Short description of error** If a mesh has a shape key then after calling ShapeKey.normals_polygon_get() the vertices affected by the key will have wrong coordinates when accessed via MeshVertex.co. **Exact steps for others to reproduce the error** 1) open the attached blend file 2) run the active script in the Text Editor 3) check the output in the system console Expected results: vertex coordinates accessed before and after ShapeKey.normals_polygon_get() are the same, e.g.: <Vector (1.0000, 1.0000, 1.0000)> <Vector (1.0000, 1.0000, 1.0000)> Actual results: vertex coordinates are different, e.g.: <Vector (1.0000, 1.0000, 1.0000)> <Vector (2.0000, 2.0000, 2.0000)> Additional notes: - can be reproduced in the latest 3.2.0 build - same issue also arises when using ShapeKey.normals_split_get() or ShapeKey.normals_vertex_get() instead of ShapeKey.normals_polygon_get() [test.blend](https://archive.blender.org/developer/F13034699/test.blend)

Added subscriber: @ivan_lyubovnikov

Added subscriber: @ivan_lyubovnikov
Hans Goudey self-assigned this 2022-04-28 15:04:57 +02:00

Added subscriber: @AlexKowel

Added subscriber: @AlexKowel
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. The fix is simple, just a small error in b0aaf6ff4a

Thanks for the report. The fix is simple, just a small error in b0aaf6ff4a

This issue was referenced by c9c95201d0

This issue was referenced by c9c95201d0812967e6b03d68a51721e79cd429d8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the quick fix!

Thanks for the quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97679
No description provided.