Fix T97679: Retrieving shape key normals modifies vertices

Caused by not using the proper duplicated `MVert` array.
Error in b0aaf6ff4a9731e9142d8.